updated docs login
